--- a/src/app/todo/todo-footer/todo-footer.component.html
+++ b/src/app/todo/todo-footer/todo-footer.component.html
@@ -1,1 +1,5 @@
-<p>todo-footer works!</p>
+<footer class="footer1">
+    <div class="footer-center">
+      <p><b>Tasks left: 3</b></p>
+    </div>
+    </footer>
