--- a/src/app/todo/todo-input/todo-input.component.html
+++ b/src/app/todo/todo-input/todo-input.component.html
@@ -1,1 +1,4 @@
-<p>todo-input works!</p>
+<div class="center">
+    <input type="text" id="Text1" name="TextBox1" size="20">
+    <input type="button" onclick="add()" value="+">
+  </div>
