--- a/src/app/todo/todo-list/todo-list.component.html
+++ b/src/app/todo/todo-list/todo-list.component.html
@@ -1,1 +1,12 @@
-<p>todo-list works!</p>
+<div class="list">
+    <p>&emsp;Lab assignments</p>
+    <button type="button" class="button" style="float: right;">❌</button>
+  </div>
+  <div class="list">
+    <p>&emsp;Make a resume</p>
+    <button type="button" class="button" style="float: right;">❌</button>
+  </div>
+  <div class="list">
+    <p>&emsp;Exercise</p>
+    <button type="button" class="button" style="float: right;">❌</button>
+  </div>
